<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_areaconvert"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_areaconvert" />
        <item
            android:id="@+id/nav_currencyconvert"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_currencyconvert" />
        <item
            android:id="@+id/nav_lengthconvert"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lengthconvert" />
        <item
            android:id="@+id/nav_massconvert"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_massconvert" />
        <item
            android:id="@+id/nav_speedconvert"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_speedconvert" />
    </group>
</menu>