<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calc">

    <fragment
        android:id="@+id/nav_calc"
        android:name="com.example.assigment_6_12.ui.calc.CalcFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_calc" />

    <fragment
        android:id="@+id/nav_areaconvert"
        android:name="com.example.assigment_6_12.ui.area.AreaFragment"
        android:label="@string/menu_areaconvert"
        tools:layout="@layout/fragment_area" />
    <fragment
        android:id="@+id/nav_currencyconvert"
        android:name="com.example.assigment_6_12.ui.currency.CurrencyFragment"
        android:label="@string/menu_currencyconvert"
        tools:layout="@layout/fragment_area" />
    <fragment
        android:id="@+id/nav_lengthconvert"
        android:name="com.example.assigment_6_12.ui.length.LengthFragment"
        android:label="@string/menu_lengthconvert"
        tools:layout="@layout/fragment_area" />
    <fragment
        android:id="@+id/nav_massconvert"
        android:name="com.example.assigment_6_12.ui.mass.MassFragment"
        android:label="@string/menu_massconvert"
        tools:layout="@layout/fragment_area" />
    <fragment
        android:id="@+id/nav_speedconvert"
        android:name="com.example.assigment_6_12.ui.speed.SpeedFragment"
        android:label="@string/menu_speedconvert"
        tools:layout="@layout/fragment_area" />
</navigation>